--- a/components/clock.html
+++ b/components/clock.html
@@ -581,9 +581,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.15.3" data-path="input/number.md">
+        <li class="chapter " data-level="1.4.15.3" data-path="input/number.html">
             
-                <span>
+                <a href="input/number.html">
             
                     
                     Number Input
@@ -594,9 +594,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.15.4" data-path="input/proportions.md">
+        <li class="chapter " data-level="1.4.15.4" data-path="input/proportions.html">
             
-                <span>
+                <a href="input/proportions.html">
             
                     
                     Proportions Input
@@ -607,9 +607,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.15.5" data-path="input/select.md">
+        <li class="chapter " data-level="1.4.15.5" data-path="input/select.html">
             
-                <span>
+                <a href="input/select.html">
             
                     
                     Select Input
@@ -620,9 +620,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.15.6" data-path="input/slider.md">
+        <li class="chapter " data-level="1.4.15.6" data-path="input/slider.html">
             
-                <span>
+                <a href="input/slider.html">
             
                     
                     Slider Input
@@ -646,9 +646,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.15.8" data-path="input/text.md">
+        <li class="chapter " data-level="1.4.15.8" data-path="input/text.html">
             
-                <span>
+                <a href="input/text.html">
             
                     
                     Text Input
@@ -659,9 +659,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.15.9" data-path="input/voice.md">
+        <li class="chapter " data-level="1.4.15.9" data-path="input/voice.html">
             
-                <span>
+                <a href="input/voice.html">
             
                     
                     Voice Input
@@ -1394,7 +1394,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Clock","level":"1.4.18.1","depth":3,"next":{"title":"Color Picker","level":"1.4.18.2","depth":3,"path":"components/color-picker.md","ref":"components/color-picker.md","articles":[]},"previous":{"title":"Helper","level":"1.4.18","depth":2,"path":"chapters/helper.md","ref":"chapters/helper.md","articles":[{"title":"Clock","level":"1.4.18.1","depth":3,"path":"components/clock.md","ref":"components/clock.md","articles":[]},{"title":"Color Picker","level":"1.4.18.2","depth":3,"path":"components/color-picker.md","ref":"components/color-picker.md","articles":[]},{"title":"Date Range Picker","level":"1.4.18.3","depth":3,"path":"components/date-range-picker.md","ref":"components/date-range-picker.md","articles":[]},{"title":"JSShell","level":"1.4.18.4","depth":3,"path":"components/js-shell.md","ref":"components/js-shell.md","articles":[]},{"title":"Playground","level":"1.4.18.5","depth":3,"path":"components/playground.md","ref":"components/playground.md","articles":[]},{"title":"Spinner","level":"1.4.18.6","depth":3,"path":"components/spinner.md","ref":"components/spinner.md","articles":[]},{"title":"Timer","level":"1.4.18.7","depth":3,"path":"components/timer.md","ref":"components/timer.md","articles":[]}]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/clock.md","mtime":"2018-09-10T03:43:04.819Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-09-10T03:54:17.345Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Clock","level":"1.4.18.1","depth":3,"next":{"title":"Color Picker","level":"1.4.18.2","depth":3,"path":"components/color-picker.md","ref":"components/color-picker.md","articles":[]},"previous":{"title":"Helper","level":"1.4.18","depth":2,"path":"chapters/helper.md","ref":"chapters/helper.md","articles":[{"title":"Clock","level":"1.4.18.1","depth":3,"path":"components/clock.md","ref":"components/clock.md","articles":[]},{"title":"Color Picker","level":"1.4.18.2","depth":3,"path":"components/color-picker.md","ref":"components/color-picker.md","articles":[]},{"title":"Date Range Picker","level":"1.4.18.3","depth":3,"path":"components/date-range-picker.md","ref":"components/date-range-picker.md","articles":[]},{"title":"JSShell","level":"1.4.18.4","depth":3,"path":"components/js-shell.md","ref":"components/js-shell.md","articles":[]},{"title":"Playground","level":"1.4.18.5","depth":3,"path":"components/playground.md","ref":"components/playground.md","articles":[]},{"title":"Spinner","level":"1.4.18.6","depth":3,"path":"components/spinner.md","ref":"components/spinner.md","articles":[]},{"title":"Timer","level":"1.4.18.7","depth":3,"path":"components/timer.md","ref":"components/timer.md","articles":[]}]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/clock.md","mtime":"2018-09-10T14:04:51.994Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-09-10T16:50:12.554Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
