--- a/components/input/checkbox.html
+++ b/components/input/checkbox.html
@@ -61,7 +61,7 @@
     <link rel="shortcut icon" href="../../gitbook/images/favicon.ico" type="image/x-icon">
 
     
-    <link rel="next" href="number.md" />
+    <link rel="next" href="number.html" />
     
     
     <link rel="prev" href="../dashboard.html" />
@@ -581,9 +581,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.15.3" data-path="number.md">
+        <li class="chapter " data-level="1.4.15.3" data-path="number.html">
             
-                <span>
+                <a href="number.html">
             
                     
                     Number Input
@@ -594,9 +594,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.15.4" data-path="proportions.md">
+        <li class="chapter " data-level="1.4.15.4" data-path="proportions.html">
             
-                <span>
+                <a href="proportions.html">
             
                     
                     Proportions Input
@@ -607,9 +607,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.15.5" data-path="select.md">
+        <li class="chapter " data-level="1.4.15.5" data-path="select.html">
             
-                <span>
+                <a href="select.html">
             
                     
                     Select Input
@@ -620,9 +620,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.15.6" data-path="slider.md">
+        <li class="chapter " data-level="1.4.15.6" data-path="slider.html">
             
-                <span>
+                <a href="slider.html">
             
                     
                     Slider Input
@@ -646,9 +646,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.15.8" data-path="text.md">
+        <li class="chapter " data-level="1.4.15.8" data-path="text.html">
             
-                <span>
+                <a href="text.html">
             
                     
                     Text Input
@@ -659,9 +659,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.15.9" data-path="voice.md">
+        <li class="chapter " data-level="1.4.15.9" data-path="voice.html">
             
-                <span>
+                <a href="voice.html">
             
                     
                     Voice Input
@@ -1342,7 +1342,7 @@
                                 <section class="normal markdown-section">
                                 
                                 <h1 id="checkbox-input">Checkbox Input</h1>
-<p>A checkbox input component. Usually, this component will be used as part of an ISLE dashboard, but it can also be used standalone. In this case, you want to handle changes via the <code>onChange</code> attribute.</p>
+<p>A checkbox input component. Can be used as part of an ISLE dashboard or standalone. In the latter case, you want to handle changes via the <code>onChange</code> attribute or bind the value to a global variable via the <code>bind</code> attribute.</p>
 <h4 id="example">Example:</h4>
 <pre class="language-"><code class="lang-js"><span class="token operator">&lt;</span>CheckboxInput
     legend<span class="token operator">=</span><span class="token string">&quot;Take the logarithm&quot;</span>
@@ -1392,7 +1392,7 @@
                 </a>
                 
                 
-                <a href="number.md" class="navigation navigation-next " aria-label="Next page: Number Input">
+                <a href="number.html" class="navigation navigation-next " aria-label="Next page: Number Input">
                     <i class="fa fa-angle-right"></i>
                 </a>
                 
@@ -1403,7 +1403,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Checkbox Input","level":"1.4.15.2","depth":3,"next":{"title":"Number Input","level":"1.4.15.3","depth":3,"path":"components/input/number.md","ref":"components/input/number.md","articles":[]},"previous":{"title":"Dashboard","level":"1.4.15.1","depth":3,"path":"components/dashboard.md","ref":"components/dashboard.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/input/checkbox.md","mtime":"2018-09-10T03:46:56.822Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-09-10T03:54:17.345Z"},"basePath":"../..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Checkbox Input","level":"1.4.15.2","depth":3,"next":{"title":"Number Input","level":"1.4.15.3","depth":3,"path":"components/input/number.md","ref":"components/input/number.md","articles":[]},"previous":{"title":"Dashboard","level":"1.4.15.1","depth":3,"path":"components/dashboard.md","ref":"components/dashboard.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/input/checkbox.md","mtime":"2018-09-10T14:04:52.010Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-09-10T16:50:12.554Z"},"basePath":"../..","book":{"language":""}});
         });
     </script>
 </div>
