--- a/components/input/voice.html
+++ b/components/input/voice.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
-        <title>R Output · ISLE Editor Documentation</title>
+        <title>Voice Input · ISLE Editor Documentation</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="description" content="">
         <meta name="generator" content="GitBook 3.2.2">
@@ -61,10 +61,10 @@
     <link rel="shortcut icon" href="../../gitbook/images/favicon.ico" type="image/x-icon">
 
     
-    <link rel="next" href="plot.html" />
+    <link rel="next" href="../../chapters/display.html" />
     
     
-    <link rel="prev" href="help.html" />
+    <link rel="prev" href="text.html" />
     
 
     </head>
@@ -471,9 +471,9 @@
             <ul class="articles">
                 
     
-        <li class="chapter " data-level="1.4.14.1" data-path="help.html">
+        <li class="chapter " data-level="1.4.14.1" data-path="../r/help.html">
             
-                <a href="help.html">
+                <a href="../r/help.html">
             
                     
                     R Help
@@ -484,9 +484,9 @@
             
         </li>
     
-        <li class="chapter active" data-level="1.4.14.2" data-path="output.html">
+        <li class="chapter " data-level="1.4.14.2" data-path="../r/output.html">
             
-                <a href="output.html">
+                <a href="../r/output.html">
             
                     
                     R Output
@@ -497,9 +497,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.14.3" data-path="plot.html">
+        <li class="chapter " data-level="1.4.14.3" data-path="../r/plot.html">
             
-                <a href="plot.html">
+                <a href="../r/plot.html">
             
                     
                     R Plot
@@ -510,9 +510,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.14.4" data-path="shell.html">
+        <li class="chapter " data-level="1.4.14.4" data-path="../r/shell.html">
             
-                <a href="shell.html">
+                <a href="../r/shell.html">
             
                     
                     R Shell
@@ -523,9 +523,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.14.5" data-path="table.html">
+        <li class="chapter " data-level="1.4.14.5" data-path="../r/table.html">
             
-                <a href="table.html">
+                <a href="../r/table.html">
             
                     
                     R Table
@@ -568,9 +568,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.15.2" data-path="../input/checkbox.html">
+        <li class="chapter " data-level="1.4.15.2" data-path="checkbox.html">
             
-                <a href="../input/checkbox.html">
+                <a href="checkbox.html">
             
                     
                     Checkbox Input
@@ -581,9 +581,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.15.3" data-path="../input/number.html">
+        <li class="chapter " data-level="1.4.15.3" data-path="number.html">
             
-                <a href="../input/number.html">
+                <a href="number.html">
             
                     
                     Number Input
@@ -594,9 +594,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.15.4" data-path="../input/proportions.html">
+        <li class="chapter " data-level="1.4.15.4" data-path="proportions.html">
             
-                <a href="../input/proportions.html">
+                <a href="proportions.html">
             
                     
                     Proportions Input
@@ -607,9 +607,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.15.5" data-path="../input/select.html">
+        <li class="chapter " data-level="1.4.15.5" data-path="select.html">
             
-                <a href="../input/select.html">
+                <a href="select.html">
             
                     
                     Select Input
@@ -620,9 +620,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.15.6" data-path="../input/slider.html">
+        <li class="chapter " data-level="1.4.15.6" data-path="slider.html">
             
-                <a href="../input/slider.html">
+                <a href="slider.html">
             
                     
                     Slider Input
@@ -633,7 +633,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.15.7" data-path="../input/text-area.md">
+        <li class="chapter " data-level="1.4.15.7" data-path="text-area.md">
             
                 <span>
             
@@ -646,9 +646,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.15.8" data-path="../input/text.html">
+        <li class="chapter " data-level="1.4.15.8" data-path="text.html">
             
-                <a href="../input/text.html">
+                <a href="text.html">
             
                     
                     Text Input
@@ -659,9 +659,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.15.9" data-path="../input/voice.html">
+        <li class="chapter active" data-level="1.4.15.9" data-path="voice.html">
             
-                <a href="../input/voice.html">
+                <a href="voice.html">
             
                     
                     Voice Input
@@ -1150,9 +1150,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.21.5" data-path="plot.html">
+        <li class="chapter " data-level="1.4.21.5" data-path="../r/plot.html">
             
-                <a href="plot.html">
+                <a href="../r/plot.html">
             
                     
                     R Plot
@@ -1326,7 +1326,7 @@
     <!-- Title -->
     <h1>
         <i class="fa fa-circle-o-notch fa-spin"></i>
-        <a href="../.." >R Output</a>
+        <a href="../.." >Voice Input</a>
     </h1>
 </div>
 
@@ -1341,17 +1341,38 @@
     
                                 <section class="normal markdown-section">
                                 
-                                <h1 id="r-output">R Output</h1>
-<p>Component for rendering R output inside an ISLE lesson.</p>
+                                <h1 id="voice-input">Voice Input</h1>
+<p>A voice input component.</p>
 <h4 id="example">Example:</h4>
-<pre class="language-"><code class="lang-js"><span class="token operator">&lt;</span>ROutput code<span class="token operator">=</span><span class="token string">&quot;runif(10)&quot;</span> <span class="token operator">/</span><span class="token operator">&gt;</span>
+<pre class="language-"><code class="lang-js"><span class="token operator">&lt;</span>VoiceInput
+    langage<span class="token operator">=</span><span class="token string">&quot;en-US&quot;</span>
+    defaultValue<span class="token operator">=</span><span class="token string">&quot;Enter text&quot;</span>
+<span class="token operator">/</span><span class="token operator">&gt;</span>
 </code></pre>
-<p><a href="https://isle.heinz.cmu.edu/components/r-output/" target="_blank">Open interactive preview</a></p>
+<p><a href="https://isle.heinz.cmu.edu/components/voice-input/" target="_blank">Open interactive preview</a></p>
 <h4 id="options">Options:</h4>
 <ul>
-<li><strong>code</strong> | <code>string</code>: R code used to evaluate. Default: <code>&apos;&apos;</code>.</li>
-<li><strong>libraries</strong> | <code>array</code>: R libraries that should be loaded automatically when the input <code>code</code> is executed. Default: <code>[]</code>.</li>
-<li><strong>prependCode</strong> | <code>(string|array)</code>: R code (or <code>array</code> of code blocks) to be prepended to the code stored in <code>code</code> when evaluating. Default: <code>&apos;&apos;</code>.</li>
+<li><strong>autorecord</strong> | <code>boolean</code>: undefined. Default: <code>false</code>.</li>
+<li><strong>defaultValue</strong> | <code>string</code>: undefined. Default: <code>&apos;&apos;</code>.</li>
+<li><strong>grammars</strong> | <code>array</code>: undefined. Default: <code>[]</code>.</li>
+<li><strong>language</strong> | <code>string</code>: undefined. Default: <code>&apos;en-US&apos;</code>.</li>
+<li><strong>legend</strong> | <code>string</code>: undefined. Default: <code>&apos;&apos;</code>.</li>
+<li><strong>mode</strong> | <code>string</code>: undefined. Default: <code>&apos;full&apos;</code>.</li>
+<li><strong>onChange</strong> | <code>function</code>: undefined. Default: <code>onChange() {}</code>.</li>
+<li><strong>onClick</strong> | <code>function</code>: undefined. Default: <code>onClick() {}</code>.</li>
+<li><strong>onFinalText</strong> | <code>function</code>: undefined. Default: <code>onFinalText() {}</code>.</li>
+<li><strong>onRecordingStart</strong> | <code>function</code>: undefined. Default: <code>onRecordingStart() {}</code>.</li>
+<li><strong>onRecordingStop</strong> | <code>function</code>: undefined. Default: <code>onRecordingStop() {}</code>.</li>
+<li><strong>onSegment</strong> | <code>function</code>: undefined. Default: <code>onSegment() {}</code>.</li>
+<li><strong>onSubmit</strong> | <code>function</code>: undefined. Default: <code>onSubmit() {}</code>.</li>
+<li><strong>placeholder</strong> | <code>string</code>: undefined. Default: <code>&apos;Enter text&apos;</code>.</li>
+<li><strong>remote</strong> | <code>object</code>: undefined. Default: <code>none</code>.</li>
+<li><strong>style</strong> | <code>object</code>: undefined. Default: <code>{}</code>.</li>
+<li><strong>timeout</strong> | <code>number</code>: undefined. Default: <code>none</code>.</li>
+<li><strong>stopTooltip</strong> | <code>string</code>: undefined. Default: <code>&apos;Click to stop recording&apos;</code>.</li>
+<li><strong>startTooltip</strong> | <code>string</code>: undefined. Default: <code>&apos;Click to start recording&apos;</code>.</li>
+<li><strong>width</strong> | <code>number</code>: undefined. Default: <code>500</code>.</li>
+<li><strong>height</strong> | <code>number</code>: undefined. Default: <code>36</code>.</li>
 </ul>
 
                                 
@@ -1380,12 +1401,12 @@
 
             
                 
-                <a href="help.html" class="navigation navigation-prev " aria-label="Previous page: R Help">
+                <a href="text.html" class="navigation navigation-prev " aria-label="Previous page: Text Input">
                     <i class="fa fa-angle-left"></i>
                 </a>
                 
                 
-                <a href="plot.html" class="navigation navigation-next " aria-label="Next page: R Plot">
+                <a href="../../chapters/display.html" class="navigation navigation-next " aria-label="Next page: Display">
                     <i class="fa fa-angle-right"></i>
                 </a>
                 
@@ -1396,7 +1417,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"R Output","level":"1.4.14.2","depth":3,"next":{"title":"R Plot","level":"1.4.14.3","depth":3,"path":"components/r/plot.md","ref":"components/r/plot.md","articles":[]},"previous":{"title":"R Help","level":"1.4.14.1","depth":3,"path":"components/r/help.md","ref":"components/r/help.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/r/output.md","mtime":"2018-09-10T14:04:52.042Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-09-10T16:50:12.554Z"},"basePath":"../..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Voice Input","level":"1.4.15.9","depth":3,"next":{"title":"Display","level":"1.4.16","depth":2,"path":"chapters/display.md","ref":"chapters/display.md","articles":[{"title":"Draggable Grid","level":"1.4.16.1","depth":3,"path":"components/draggable-grid.md","ref":"components/draggable-grid.md","articles":[]},{"title":"Draggable List","level":"1.4.16.2","depth":3,"path":"components/draggable-list.md","ref":"components/draggable-list.md","articles":[]},{"title":"Enlargeable Grid","level":"1.4.16.3","depth":3,"path":"components/enlargeable-grid.md","ref":"components/enlargeable-grid.md","articles":[]},{"title":"Grid","level":"1.4.16.4","depth":3,"path":"components/grid.md","ref":"components/grid.md","articles":[]},{"title":"Pages","level":"1.4.16.5","depth":3,"path":"components/pages.md","ref":"components/pages.md","articles":[]},{"title":"Slider","level":"1.4.16.6","depth":3,"path":"components/slider.md","ref":"components/slider.md","articles":[]},{"title":"Switch","level":"1.4.16.7","depth":3,"path":"components/switch.md","ref":"components/switch.md","articles":[]}]},"previous":{"title":"Text Input","level":"1.4.15.8","depth":3,"path":"components/input/text.md","ref":"components/input/text.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/input/voice.md","mtime":"2018-09-10T14:04:52.014Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-09-10T16:50:12.554Z"},"basePath":"../..","book":{"language":""}});
         });
     </script>
 </div>
