--- a/components/sketchpad.html
+++ b/components/sketchpad.html
@@ -581,9 +581,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.15.3" data-path="input/number.md">
+        <li class="chapter " data-level="1.4.15.3" data-path="input/number.html">
             
-                <span>
+                <a href="input/number.html">
             
                     
                     Number Input
@@ -594,9 +594,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.15.4" data-path="input/proportions.md">
+        <li class="chapter " data-level="1.4.15.4" data-path="input/proportions.html">
             
-                <span>
+                <a href="input/proportions.html">
             
                     
                     Proportions Input
@@ -607,9 +607,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.15.5" data-path="input/select.md">
+        <li class="chapter " data-level="1.4.15.5" data-path="input/select.html">
             
-                <span>
+                <a href="input/select.html">
             
                     
                     Select Input
@@ -620,9 +620,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.15.6" data-path="input/slider.md">
+        <li class="chapter " data-level="1.4.15.6" data-path="input/slider.html">
             
-                <span>
+                <a href="input/slider.html">
             
                     
                     Slider Input
@@ -646,9 +646,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.15.8" data-path="input/text.md">
+        <li class="chapter " data-level="1.4.15.8" data-path="input/text.html">
             
-                <span>
+                <a href="input/text.html">
             
                     
                     Text Input
@@ -659,9 +659,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.15.9" data-path="input/voice.md">
+        <li class="chapter " data-level="1.4.15.9" data-path="input/voice.html">
             
-                <span>
+                <a href="input/voice.html">
             
                     
                     Voice Input
@@ -1413,7 +1413,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Sketchpad","level":"1.4.4","depth":2,"next":{"title":"Question","level":"1.4.5","depth":2,"path":"chapters/question.md","ref":"chapters/question.md","articles":[{"title":"Free Text Question","level":"1.4.5.1","depth":3,"path":"components/free-text-question.md","ref":"components/free-text-question.md","articles":[]},{"title":"Match List Question","level":"1.4.5.2","depth":3,"path":"components/match-list-question.md","ref":"components/match-list-question.md","articles":[]},{"title":"Multiple Choice Question","level":"1.4.5.3","depth":3,"path":"components/multiple-choice-question.md","ref":"components/multiple-choice-question.md","articles":[]},{"title":"Number Question","level":"1.4.5.4","depth":3,"path":"components/number-question.md","ref":"components/number-question.md","articles":[]},{"title":"Order Question","level":"1.4.5.5","depth":3,"path":"components/order-question.md","ref":"components/order-question.md","articles":[]},{"title":"Range Question","level":"1.4.5.6","depth":3,"path":"components/range-question.md","ref":"components/range-question.md","articles":[]},{"title":"Select Question","level":"1.4.5.7","depth":3,"path":"components/select-question.md","ref":"components/select-question.md","articles":[]}]},"previous":{"title":"Markdown Editor","level":"1.4.3","depth":2,"path":"components/markdown-editor.md","ref":"components/markdown-editor.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/sketchpad.md","mtime":"2018-09-10T03:43:04.871Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-09-10T03:54:17.345Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Sketchpad","level":"1.4.4","depth":2,"next":{"title":"Question","level":"1.4.5","depth":2,"path":"chapters/question.md","ref":"chapters/question.md","articles":[{"title":"Free Text Question","level":"1.4.5.1","depth":3,"path":"components/free-text-question.md","ref":"components/free-text-question.md","articles":[]},{"title":"Match List Question","level":"1.4.5.2","depth":3,"path":"components/match-list-question.md","ref":"components/match-list-question.md","articles":[]},{"title":"Multiple Choice Question","level":"1.4.5.3","depth":3,"path":"components/multiple-choice-question.md","ref":"components/multiple-choice-question.md","articles":[]},{"title":"Number Question","level":"1.4.5.4","depth":3,"path":"components/number-question.md","ref":"components/number-question.md","articles":[]},{"title":"Order Question","level":"1.4.5.5","depth":3,"path":"components/order-question.md","ref":"components/order-question.md","articles":[]},{"title":"Range Question","level":"1.4.5.6","depth":3,"path":"components/range-question.md","ref":"components/range-question.md","articles":[]},{"title":"Select Question","level":"1.4.5.7","depth":3,"path":"components/select-question.md","ref":"components/select-question.md","articles":[]}]},"previous":{"title":"Markdown Editor","level":"1.4.3","depth":2,"path":"components/markdown-editor.md","ref":"components/markdown-editor.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/sketchpad.md","mtime":"2018-09-10T14:04:52.054Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-09-10T16:50:12.554Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
