--- a/components/slider.html
+++ b/components/slider.html
@@ -581,9 +581,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.15.3" data-path="input/number.md">
+        <li class="chapter " data-level="1.4.15.3" data-path="input/number.html">
             
-                <span>
+                <a href="input/number.html">
             
                     
                     Number Input
@@ -594,9 +594,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.15.4" data-path="input/proportions.md">
+        <li class="chapter " data-level="1.4.15.4" data-path="input/proportions.html">
             
-                <span>
+                <a href="input/proportions.html">
             
                     
                     Proportions Input
@@ -607,9 +607,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.15.5" data-path="input/select.md">
+        <li class="chapter " data-level="1.4.15.5" data-path="input/select.html">
             
-                <span>
+                <a href="input/select.html">
             
                     
                     Select Input
@@ -620,9 +620,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.15.6" data-path="input/slider.md">
+        <li class="chapter " data-level="1.4.15.6" data-path="input/slider.html">
             
-                <span>
+                <a href="input/slider.html">
             
                     
                     Slider Input
@@ -646,9 +646,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.15.8" data-path="input/text.md">
+        <li class="chapter " data-level="1.4.15.8" data-path="input/text.html">
             
-                <span>
+                <a href="input/text.html">
             
                     
                     Text Input
@@ -659,9 +659,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.15.9" data-path="input/voice.md">
+        <li class="chapter " data-level="1.4.15.9" data-path="input/voice.html">
             
-                <span>
+                <a href="input/voice.html">
             
                     
                     Voice Input
@@ -1342,7 +1342,7 @@
                                 <section class="normal markdown-section">
                                 
                                 <h1 id="slider">Slider</h1>
-<p>A component which displays its children in a slideshow or carousel. </p>
+<p>A component which displays its children in a slideshow or carousel.</p>
 <h4 id="example">Example:</h4>
 <pre class="language-"><code class="lang-js"><span class="token operator">&lt;</span>Slider title<span class="token operator">=</span><span class="token string">&quot;Questions to explore:&quot;</span> <span class="token operator">&gt;</span>
     <span class="token operator">&lt;</span>p<span class="token operator">&gt;</span>Try generating <span class="token keyword">new</span> <span class="token class-name">samples</span> <span class="token keyword">of</span> the Normal data<span class="token punctuation">.</span> You<span class="token string">&apos;ll notice that the points don&apos;</span>t always lie exactly on the line<span class="token punctuation">.</span> This is typical variation<span class="token punctuation">.</span> As you generate more random realizations <span class="token keyword">of</span> <span class="token keyword">this</span> plot you&apos;ll <span class="token keyword">get</span> better calibrated to the kind <span class="token keyword">of</span> deviation you can expect to see <span class="token keyword">from</span> <span class="token keyword">this</span> large a sample <span class="token keyword">of</span> Normal data<span class="token punctuation">.</span><span class="token operator">&lt;</span><span class="token operator">/</span>p<span class="token operator">&gt;</span>
@@ -1408,7 +1408,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Slider","level":"1.4.16.6","depth":3,"next":{"title":"Switch","level":"1.4.16.7","depth":3,"path":"components/switch.md","ref":"components/switch.md","articles":[]},"previous":{"title":"Pages","level":"1.4.16.5","depth":3,"path":"components/pages.md","ref":"components/pages.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/slider.md","mtime":"2018-09-10T03:19:40.593Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-09-10T03:54:17.345Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Slider","level":"1.4.16.6","depth":3,"next":{"title":"Switch","level":"1.4.16.7","depth":3,"path":"components/switch.md","ref":"components/switch.md","articles":[]},"previous":{"title":"Pages","level":"1.4.16.5","depth":3,"path":"components/pages.md","ref":"components/pages.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/slider.md","mtime":"2018-09-10T14:04:52.054Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-09-10T16:50:12.554Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
